--- a/Code/conduction-test_1D.ipynb
+++ b/Code/conduction-test_1D.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28d7fb3dbb27c76d696fd60596a18119f074e01f2331bcbc80a122dc7f0a0ed8"
+  "signature": "sha256:c49d8053d480d280874cfa40021b390d288e1f374410c02e249385eedfa37834"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -301,6 +301,27 @@
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.random.rand(3,2)\n",
+      "a[0:1,:].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "(1, 2)"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
