Ajout au rapport d'une description complète de la première simulation à faire

--- a/Code/conduction.ipynb
+++ b/Code/conduction.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:354275c1eba96487dbd122dab3a93083f4a8f39652f048ce32a99ea3d27d436b"
+  "signature": "sha256:6e0b9c85badf7a9398dd66a75a9807b5037c2b8a0165466183fefd3b0ca4a23d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,10 +89,7 @@
       "        #print('u \\n',u2.toarray())\n",
       "        #print('u \\n',(u2*d2).toarray())\n",
       "\n",
-      "        #condition aux limites\n",
-      "        print(x)\n",
-      "        \n",
-      "        \n",
+      "        #condition aux limites  \n",
       "        \n",
       "        d1 = d1.tocsr()\n",
       "        d1[0,0:3]  = [-2,1,1]\n",
@@ -188,7 +185,7 @@
       "            \n",
       "            plt.pause(0.5)\n",
       "\n",
-      "t = terre(taille=6,x=2)"
+      "t = terre(taille=6)"
      ],
      "language": "python",
      "metadata": {},
