--- a/Rapport/rapport_Geo_Project.tex
+++ b/Rapport/rapport_Geo_Project.tex
@@ -106,7 +106,7 @@ Sous-titre
 
 
 \begin{center}
-\includegraphics[height=6cm]{figures/front_simu.jpg} 
+\includegraphics[height=5cm]{figures/terre_core.pdf} 
 \end{center} 
 
 
