--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -223,6 +223,40 @@ $$\rho C_p \dfrac{\partial T}{\partial t}= k_{T} \Delta T  + P$$
 \end{frame}
 %%%%%%%%%%%%%
 
+\subsection{Condition initiale}
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Un problème de diffusion}
+	\framesubtitle{Condition initiale}
+
+\vspace{-1cm}
+
+\begin{columns}
+    \begin{column}{7cm}      
+	  \center \includegraphics[height = 4cm]{figures/dust.png}  
+	\end{column}
+	
+	\begin{column}{1cm}      
+	  \center {\huge $\Rightarrow$}  
+	\end{column}
+
+	\begin{column}{5cm}     
+      \center \includegraphics[width = 3cm]{figures/mimas.png}
+      \vspace{-0.4cm}
+	\end{column}
+\end{columns}
+
+\center
+Accrétion rapide d'un nuage de poussière en planétésimal
+\vspace{0.5cm}
+
+$\rightarrow$ L'énergie gravitationnelle $ E = \dfrac{3}{5} \dfrac{GM^2}{R}$ est convertie en chaleur.
+
+$$T^0 \ =\  T_{neb} + \frac{4\pi}{5}\frac{\rho G}{C_p} R^2 \  \simeq \ T_{neb}$$
+
+\end{frame}
+%%%%%%%%%%%%%
 
 \subsection{Méthodes numériques}
 
@@ -291,16 +325,17 @@ $$
 \end{frame}
 %%%%%%%%%%%%%
 
-\section{Perspectives}
-\subsection{yolo}
-
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Perspectives}
-	\framesubtitle{yolo}
+	\frametitle{Conclusion et Perspectives}
+	\framesubtitle{\ }
+	
+
 	
 \end{frame}
 %%%%%%%%%%%%%
+
+
 
 %%%%%%%%%%%%% 
 \begin{frame}
@@ -339,14 +374,6 @@ $$
 \end{frame}
 %%%%%%%%%%%%%
 
-
-%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Conclusion}
-\framesubtitle{\ }
-
-\end{frame}
-%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%
 \end{document}
