--- a/Rapport/rapport_Geo_Project.tex
+++ b/Rapport/rapport_Geo_Project.tex
@@ -595,6 +595,8 @@ Si on veut une expression en fonction du rayon initiale $R$ :
 $$E=G\left(\frac{4\pi}{3}\rho\right)^\frac{1}{3}\frac{3}{5} \left(\rho\frac{4}{3}\pi\right)^{5/3}R^5$$
 soit :
 $$E=\frac{3}{5}G\left(\frac{4\pi}{3}\rho\right)^2 R^5$$
+Remarque : on peut aussi l'écrire
+$$ E = \frac{3}{5} \frac{GM^2}{R}$$
 
 comme condition initiale sur la température :
 $$T_0=T_{neb} + \frac{1}{C_p M} E$$
