--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -292,24 +292,77 @@ $$
 \end{frame}
 %%%%%%%%%%%%%
 
-\section{Diffusion sans accrétion}
-\subsection{yolo}
+\section{Chauffage radioactif}
+\subsection{Influence de la chaleur latente}
 
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Diffusion sans accrétion}
-	\framesubtitle{yolo}
-	
+	\frametitle{Chauffage radioactif}
+	\framesubtitle{Influence de la chaleur latente}
+\vspace{-0.5cm}
+
+\center \includegraphics[width = 10cm]{figures/diffusion1.pdf}
+  
+Profil de température après 1 million d'années pour $R = 500$ km.
+	  	
 \end{frame}
 %%%%%%%%%%%%%
 
-\section{Diffusion avec accrétion}
-\subsection{yolo}
+\subsection{Influence de la taille du planétésimal}
 
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Diffusion avec accrétion}
-	\framesubtitle{yolo}
+	\frametitle{Chauffage radioactif}
+	\framesubtitle{Influence de la taille du planétésimal}
+\vspace{-0.5cm}
+
+\center \includegraphics[width = 10cm]{figures/diffusion2.pdf} 
+ 
+Profil de température après 1 million d'années pour différents $R$.
+
+
+	  	
+\end{frame}
+%%%%%%%%%%%%%
+
+\subsection{Evolution en température}
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Chauffage radioactif}
+	\framesubtitle{Evolution de la température}
+
+\center \includegraphics[width = 6cm]{figures/diffusion2.pdf}  
+	  	
+\end{frame}
+%%%%%%%%%%%%%
+
+\section{Ajout d'un terme d'accrétion}
+\subsection{Evolution du rayon}
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Ajout d'un terme d'accrétion}
+	\framesubtitle{Evolution du rayon}
+
+		{\Large $$\rho C_p \left(\dfrac{\partial T}{\partial t} - \dot{R}\dfrac{\partial T}{\partial R}\right)  = k_{T} \Delta T  + P$$}
+\begin{columns}
+    \begin{column}{2cm}
+      	{\huge $$\dot{R} \simeq R^\beta$$}
+	\end{column}
+
+	\begin{column}{9cm}
+\center \includegraphics[width = 9cm]{figures/rayon.pdf}
+	\end{column}
+\end{columns}
+\end{frame}
+%%%%%%%%%%%%%
+
+\subsection{Influence sur les températures}
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Ajout d'un terme d'accrétion}
+	\framesubtitle{Influence sur les températures}
 	
 \end{frame}
 %%%%%%%%%%%%%
