--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -293,21 +293,6 @@ $$
 %%%%%%%%%%%%%
 
 \section{Chauffage radioactif}
-\subsection{Influence de la chaleur latente}
-
-%%%%%%%%%%%%% 
-\begin{frame}
-	\frametitle{Chauffage radioactif}
-	\framesubtitle{Influence de la chaleur latente}
-\vspace{-0.5cm}
-
-\center \includegraphics[width = 10cm]{figures/diffusion1.pdf}
-  
-Profil de température après 1 million d'années pour $R = 500$ km.
-	  	
-\end{frame}
-%%%%%%%%%%%%%
-
 \subsection{Influence de la taille du planétésimal}
 
 %%%%%%%%%%%%% 
@@ -316,7 +301,7 @@ Profil de température après 1 million d'années pour $R = 500$ km.
 	\framesubtitle{Influence de la taille du planétésimal}
 \vspace{-0.5cm}
 
-\center \includegraphics[width = 10cm]{figures/diffusion2.pdf} 
+\center \includegraphics[width = 9cm]{figures/diffusion2.pdf} 
  
 Profil de température après 1 million d'années pour différents $R$.
 
@@ -325,14 +310,34 @@ Profil de température après 1 million d'années pour différents $R$.
 \end{frame}
 %%%%%%%%%%%%%
 
+\subsection{Influence de la chaleur latente}
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Chauffage radioactif}
+	\framesubtitle{Influence de la chaleur latente}
+\vspace{-0.5cm}
+
+\center \includegraphics[width = 9cm]{figures/diffusion1.pdf}
+  
+Profil de température après 1 million d'années pour $R = 500$ km.
+	  	
+\end{frame}
+%%%%%%%%%%%%%
+
+
+
 \subsection{Evolution en température}
 
 %%%%%%%%%%%%% 
 \begin{frame}
 	\frametitle{Chauffage radioactif}
 	\framesubtitle{Evolution de la température}
+\vspace{-0.5cm}
 
-\center \includegraphics[width = 6cm]{figures/diffusion2.pdf}  
+\center \includegraphics[width = 9cm]{figures/diffusion1.pdf}  
+
+Température moyenne en fonction du temps pour $R = X$ km.
 	  	
 \end{frame}
 %%%%%%%%%%%%%
@@ -364,6 +369,8 @@ Profil de température après 1 million d'années pour différents $R$.
 	\frametitle{Ajout d'un terme d'accrétion}
 	\framesubtitle{Influence sur les températures}
 	
+
+	
 \end{frame}
 %%%%%%%%%%%%%
 
@@ -373,7 +380,30 @@ Profil de température après 1 million d'années pour différents $R$.
 %%%%%%%%%%%%% 
 \begin{frame}
 	\frametitle{Chauffage par impact}
-	\framesubtitle{yolo}
+	\framesubtitle{Description du modèle}
+	
+\vspace{-0.3cm}
+\center \includegraphics[height = 4cm]{figures/impact.pdf}  
+
+
+Energie des impactants : 
+
+energie gravitationnelle + energie thermique
+\vspace{0.5cm}
+
+\begin{enumerate}
+\item La croissance est due à la masse apportée par les impactants
+\item Seulement $20\%$ de l'énergie des impactants est introduite
+\item L'énergie est répartie sur une couche d'épaisseur $R/5$
+\item La température des impactants est de 1000 K 
+\end{enumerate}
+\end{frame}
+%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Chauffage par impact}
+	\framesubtitle{Description du modèle}
 	
 \end{frame}
 %%%%%%%%%%%%%
