--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -12,7 +12,7 @@
 \usepackage{animate}
 \usepackage{graphicx}
 \usepackage{stmaryrd}
-\usepackage[normalem]{ulem}
+\usepackage{ulem}
 
 \everymath{\displaystyle}
 
@@ -352,12 +352,12 @@ Température moyenne en fonction du temps pour $R = X$ km.
 
 		{\Large $$\rho C_p \left(\dfrac{\partial T}{\partial t} - \dot{R}\dfrac{\partial T}{\partial R}\right)  = k_{T} \Delta T  + P$$}
 \begin{columns}
-    \begin{column}{2cm}
-      	{\huge $$\dot{R} \simeq R^\beta$$}
+    \begin{column}{3cm}
+      	{\huge $$\quad \dot{R} \simeq R^\beta$$}
 	\end{column}
 
-	\begin{column}{9cm}
-\center \includegraphics[width = 9cm]{figures/rayon.pdf}
+	\begin{column}{10cm}
+\center \includegraphics[width = 8.5cm]{figures/rayon.pdf}
 	\end{column}
 \end{columns}
 \end{frame}
@@ -375,7 +375,7 @@ Température moyenne en fonction du temps pour $R = X$ km.
 %%%%%%%%%%%%%
 
 \section{Chauffage par impact}
-\subsection{yolo}
+\subsection{Description du modèle}
 
 %%%%%%%%%%%%% 
 \begin{frame}
@@ -383,13 +383,13 @@ Température moyenne en fonction du temps pour $R = X$ km.
 	\framesubtitle{Description du modèle}
 	
 \vspace{-0.3cm}
-\center \includegraphics[height = 4cm]{figures/impact.pdf}  
+\center \includegraphics[height = 5cm]{figures/impact.pdf}  
 
-
+\vspace{-0.5cm}
 Energie des impactants : 
 
 energie gravitationnelle + energie thermique
-\vspace{0.5cm}
+\vspace{0.3cm}
 
 \begin{enumerate}
 \item La croissance est due à la masse apportée par les impactants
@@ -399,6 +399,8 @@ energie gravitationnelle + energie thermique
 \end{enumerate}
 \end{frame}
 %%%%%%%%%%%%%
+
+\subsection{Influence sur les températures}
 
 %%%%%%%%%%%%% 
 \begin{frame}
@@ -413,7 +415,35 @@ energie gravitationnelle + energie thermique
 	\frametitle{Conclusion et Perspectives}
 	\framesubtitle{\ }
 	
+{\huge Conclusion :}
+\vspace{0.3cm}
 
+\begin{itemize}
+\item Chauffage radioactif \ \ : dominant aux temps courts
+
+\item Chauffage par impact : dominant aux temps longs
+
+\item Le noyau n'apparaît que pour une croissance rapide
+\end{itemize}
+\vspace{0.7cm}
+
+{\huge Perspectives :}
+\vspace{0.3cm}
+
+\begin{itemize}
+\item 
+\begin{enumerate}
+\setcounter{enumi}{3}
+\item \sout{La température des impactants est de 1000 K}
+
+$\rightarrow$ La température des impactants est calculée
+\end{enumerate}
+
+\item Séparation métal-silicate :
+
+$\rightarrow$ La séparation favorise la formation d'un noyau
+
+\end{itemize}
 	
 \end{frame}
 %%%%%%%%%%%%%
