--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -248,7 +248,7 @@ $$\rho C_p \dfrac{\partial T}{\partial t}= k_{T} \Delta T  + P$$
 \end{columns}
 
 \center
-Accrétion rapide d'un nuage de poussière en planétésimal
+Accrétion rapide d'un nuage de poussière en planétésimal.
 \vspace{0.5cm}
 
 $\rightarrow$ L'énergie gravitationnelle $ E = \dfrac{3}{5} \dfrac{GM^2}{R}$ est convertie en chaleur.
@@ -352,11 +352,12 @@ Température moyenne en fonction du temps pour $R = X$ km.
 
 		{\Large $$\rho C_p \left(\dfrac{\partial T}{\partial t} - \dot{R}\dfrac{\partial T}{\partial R}\right)  = k_{T} \Delta T  + P$$}
 \begin{columns}
-    \begin{column}{3cm}
-      	{\huge $$\quad \dot{R} \simeq R^\beta$$}
+    \begin{column}{3.7cm}
+      	{\huge $$\ \ \dot{R} \simeq R^\beta$$}
+      	$5\rightarrow500$ km en 1 My
 	\end{column}
 
-	\begin{column}{10cm}
+	\begin{column}{9cm}
 \center \includegraphics[width = 8.5cm]{figures/rayon.pdf}
 	\end{column}
 \end{columns}
@@ -367,10 +368,12 @@ Température moyenne en fonction du temps pour $R = X$ km.
 %%%%%%%%%%%%% 
 \begin{frame}
 	\frametitle{Ajout d'un terme d'accrétion}
-	\framesubtitle{Influence sur les températures}
-	
+	\framesubtitle{Evolution de la température}
 
-	
+\center \includegraphics[width = 9cm]{figures/tempMoy_acretion.pdf}
+
+Température moyenne en fonction du temps.
+
 \end{frame}
 %%%%%%%%%%%%%
 
@@ -419,11 +422,9 @@ energie gravitationnelle + energie thermique
 \vspace{0.3cm}
 
 \begin{itemize}
-\item Chauffage radioactif \ \ : dominant aux temps courts
+\item L'énergie apportée par l'impact n'est pas très importante dans la formation du noyau.
 
-\item Chauffage par impact : dominant aux temps longs
-
-\item Le noyau n'apparaît que pour une croissance rapide
+\item Le noyau n'apparaît que pour une croissance rapide au début de la vie du planétésimal.
 \end{itemize}
 \vspace{0.7cm}
 
