Presentation is finished

--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -64,7 +64,7 @@
 \framesubtitle{\ }
 
 \begin{center}
- \Large Comment un noyau peut il se former rapidement ?
+ \Large Comment un noyau peut-il se former rapidement ?
 \end{center}
 
 \begin{itemize}
@@ -335,9 +335,9 @@ Profil de température après 1 million d'années pour $R = 500$ km.
 	\framesubtitle{Evolution de la température}
 \vspace{-0.5cm}
 
-\center \includegraphics[width = 9cm]{figures/diffusion1.pdf}  
+\center \includegraphics[width = 9cm]{figures/tempMoy.pdf}  
 
-Température moyenne en fonction du temps pour $R = X$ km.
+Température moyenne en fonction du temps pour $R = 5$ km.
 	  	
 \end{frame}
 %%%%%%%%%%%%%
@@ -361,6 +361,21 @@ Température moyenne en fonction du temps pour $R = X$ km.
 \center \includegraphics[width = 8.5cm]{figures/rayon.pdf}
 	\end{column}
 \end{columns}
+\end{frame}
+%%%%%%%%%%%%%
+
+\subsection{Profil de température}
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Ajout d'un terme d'accrétion}
+	\framesubtitle{Profil de température}
+\vspace{-0.5cm}
+
+\center \includegraphics[width = 9cm]{figures/profil_acre.pdf} 
+ 
+Profil de température après 1 million d'années pour $R = 500$ km.
+	  	
 \end{frame}
 %%%%%%%%%%%%%
 
@@ -391,7 +406,7 @@ Température moyenne en fonction du temps.
 \vspace{-0.5cm}
 Energie des impactants : 
 
-energie gravitationnelle + energie thermique
+énergie gravitationnelle + énergie thermique
 \vspace{0.3cm}
 
 \begin{enumerate}
@@ -403,34 +418,46 @@ energie gravitationnelle + energie thermique
 \end{frame}
 %%%%%%%%%%%%%
 
-\subsection{Influence sur les températures}
+\subsection{Profil de température}
 
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Chauffage par impact}
-	\framesubtitle{Description du modèle}
+	\frametitle{Ajout d'un terme d'accrétion}
+	\framesubtitle{Profil de température}
+\vspace{-0.5cm}
+
+\center \includegraphics[width = 9cm]{figures/profil_acre_impact.pdf} 
+ 
+Profil de température après 1 million d'années pour $R = 500$ km.
+	  	
+\end{frame}
+%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{Conclusion}
+	\framesubtitle{\ }
+	
+
+
+\begin{itemize}
+\item L'énergie apportée par l'impact n'est pas très importante dans la formation du noyau.
+\vspace{0.5cm}
+
+\item Le noyau n'apparaît que pour une croissance rapide au début de la vie du planétésimal ($\beta = 0$ et $\beta = 1$).
+\end{itemize}
+
+
+
+
 	
 \end{frame}
 %%%%%%%%%%%%%
 
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Conclusion et Perspectives}
+	\frametitle{Conclusion}
 	\framesubtitle{\ }
-	
-{\huge Conclusion :}
-\vspace{0.3cm}
-
-\begin{itemize}
-\item L'énergie apportée par l'impact n'est pas très importante dans la formation du noyau.
-
-\item Le noyau n'apparaît que pour une croissance rapide au début de la vie du planétésimal.
-\end{itemize}
-\vspace{0.7cm}
-
-{\huge Perspectives :}
-\vspace{0.3cm}
-
 \begin{itemize}
 \item 
 \begin{enumerate}
@@ -438,18 +465,25 @@ energie gravitationnelle + energie thermique
 \item \sout{La température des impactants est de 1000 K}
 
 $\rightarrow$ La température des impactants est calculée
+
+
+\center \includegraphics[width = 3cm]{figures/tempMoy_acretion.pdf}
+\vspace{-0.45cm}
+
+\center \scalebox{.3}{Température moyenne en fonction du temps.}
+
 \end{enumerate}
 
 \item Séparation métal-silicate :
 
+\center \includegraphics[width = 3cm]{figures/phaseseparation.pdf}
+
 $\rightarrow$ La séparation favorise la formation d'un noyau
 
+
 \end{itemize}
-	
 \end{frame}
 %%%%%%%%%%%%%
-
-
 
 %%%%%%%%%%%%% 
 \begin{frame}
