--- a/Pres/Pres.tex
+++ b/Pres/Pres.tex
@@ -18,7 +18,7 @@
 
 \usepackage{bm}
 \setbeamertemplate{navigation symbols}{}
-\setbeamercolor{structure}{fg=blue!30!black}
+\setbeamercolor{structure}{fg=red!30!black}
 
 \usetheme{Warsaw}
 \setbeamertemplate{headline}{}
@@ -456,7 +456,7 @@ Profil de température après 1 million d'années pour $R = 500$ km.
 
 %%%%%%%%%%%%% 
 \begin{frame}
-	\frametitle{Conclusion}
+	\frametitle{Perspectives}
 	\framesubtitle{\ }
 \begin{itemize}
 \item 
@@ -467,13 +467,15 @@ Profil de température après 1 million d'années pour $R = 500$ km.
 $\rightarrow$ La température des impactants est calculée
 
 
+
+
 \center \includegraphics[width = 3cm]{figures/tempMoy_acretion.pdf}
 \vspace{-0.45cm}
 
 \center \scalebox{.3}{Température moyenne en fonction du temps.}
 
 \end{enumerate}
-
+\item Influence de la vitesse des impacts sur le surplus de température.
 \item Séparation métal-silicate :
 
 \center \includegraphics[width = 3cm]{figures/phaseseparation.pdf}
@@ -482,6 +484,16 @@ $\rightarrow$ La séparation favorise la formation d'un noyau
 
 
 \end{itemize}
+\end{frame}
+%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% 
+\begin{frame}
+	\frametitle{\ }
+	\framesubtitle{\ }
+
+{\center $\qquad$ \Huge Merci pour votre attention}
+
 \end{frame}
 %%%%%%%%%%%%%
 
